# aka_lab4

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: simulator.py
src/micro/: arithmetic.py  command.py  control_unit.py  data_path.py  enums.py  line.py  memory.py  microcode_rom.py  registers.py  tick.py
src/translator/: __main__.py  assembler.py  ast.py  codegen.py
tests/: test_golden.py
tests/golden/: cat.yaml  double_prec.yaml  expr_as_expr.yaml  hello.yaml  hello_user_name.yaml  prob2.yaml  sort.yaml
tests/golden/cat/: expected_listing.lst  expected_trace.txt  source.lisp
tests/golden/double_prec/: expected_listing.lst  expected_trace.txt  source.lisp
tests/golden/expr_as_expr/: expected_listing.lst  expected_output.txt  expected_trace.txt  source.lisp
tests/golden/hello/: expected_listing.lst  expected_trace.txt  source.lisp
tests/golden/hello_user_name/: expected_listing.lst  expected_trace.txt  source.lisp
tests/golden/prob2/: expected_listing.lst  expected_trace.txt  source.lisp
tests/golden/sort/: expected_listing.lst  expected_trace.txt  input.txt  source.lisp
