[project]
name = "aka-lab4"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest"]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "TID", # flake8-tidy-imports
]
ignore = [
    "N802",  # function names may be lowercase snake_case — our µPC helpers use it intentionally
    "N803",  # argument names may use short names (e.g. rd, rs1)
    "N806",  # variable names in function may be uppercase (register constants T0, A0 etc.)
    "UP007", # `X | Y` union syntax — keep Optional for older compat comments
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]  # test function names are arbitrary

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
